--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -2,20 +2,25 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Wall of Text</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 	</head>
 	<body>
-		<form action="" method="post" novalidate>
+		<form action="" method="post" class="px-2" novalidate>
 			{{ form.hidden_tag() }}
-			<p>
-			{{ form.brightness }}
+			<p> <h3> {{ form.brightness.label }} </h3>
+			{{ form.brightness(class_="form-range", min="0", max="127", value=brightness) }}
+			</p>
+			<p> <h3> {{ form.content.label }} </h3>
+			{{ form.content(class_="form-control") }}
 			</p>
 			<p>
-			{{ form.content }}
-			</p>
-			<p>
-			{{ form.submit() }}
+			{{ form.submit(class_="btn btn-primary") }}
+			{{ form.shutdown(class_="btn btn-outline-primary") }}
 			</p>
 		</form>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
 	</body>
 </html>
